--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,25 @@
+body{
+  background-color: royalblue;
+}
+
+.topNav{
+  background-color:#27a1da;
+  color:#a5ddf5;
+  text-align:center;
+  font-weight:bold;
+  font-size: larger;
+
+}
+
+.topNav:hover, .topNav:focus {
+  background-color: #2bdfff;
+  -webkit-animation: breathing 3s infinite;
+          animation: breathing 3s infinite;
+}
+
 .App {
   text-align: center;
+  background-color: indigo;
 }
 
 .App-logo {
@@ -37,6 +57,132 @@
   }
 }
 
-body {
-  background-color: violet;
+.breathNeon {
+  color: #1c7220;
+  background-color: #4cf352;
+  border: 2px solid transparent;
+  -webkit-transition: .5s all ease-in;
+  transition: .5s all ease-in;
+}
+
+.breath-neon:hover, .breathNeon:focus {
+  background-color: #ceffd0;
+  -webkit-animation: breathing 3s infinite;
+          animation: breathing 3s infinite;
+  -webkit-box-shadow: 0px 0px 10px 0px #b5ffb8;
+          box-shadow: 0px 0px 10px 0px #b5ffb8;
+}
+
+.skyNeon {
+  color: #1c5169;
+  background-color: #86dbff;
+  -webkit-transition: .3s all ease-in;
+  transition: .3s all ease-in;
+  border: 2px solid transparent;
+}
+
+.skyNeon:hover, .skyNeon:focus {
+  -webkit-box-shadow: 0px 0px 20px 15px #3cc6d8;
+  box-shadow: 0px 0px 30px 20px #3cc6d8;
+  background-color: #d7f3ff;
+}
+
+.orangeNeon:hover, .orangeNeon:focus {
+  -webkit-box-shadow: 0px 0px 20px 15px #f7e11b;
+  box-shadow: 0px 0px 30px 20px #f09a1a;
+  background-color: #fff2d7;
+}
+
+.greenNeon:hover, .greenNeon:focus {
+  -webkit-box-shadow: 0px 0px 20px 15px #40f71b;
+  box-shadow: 0px 0px 30px 20px #1af05a;
+  background-color: #d7ffe4;
+}
+
+
+.busqueda{
+  width: 450px !important;
+}
+
+.crop-text-2 {
+  -webkit-line-clamp: 5;
+  overflow : hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+}
+
+
+.precio:hover, .precio:focus {
+  -webkit-box-shadow: 0px 0px 20px 15px #c6fcb1;
+  box-shadow: 0px 0px 30px 20px #7cf886;
+  background-color: #65f32c !important;
+}
+
+.gradient-button {
+  margin: 20px;
+  font-family: "Arial Black", Gadget, sans-serif;
+  font-size: 20px;
+  padding: 15px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: #FFF;
+  box-shadow: 0 0 20px #eee;
+  border-radius: 10px;
+  width: 200px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  cursor: pointer;
+  display: inline-block;
+  border-radius: 25px;
+}
+.gradient-button:hover{
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  margin: 8px 10px 12px;
+}
+.gradient-button-1 {
+  margin: 20px;
+  font-family: Impact, Haettenschweiler, 'Arial Bold', sans-serif;
+  font-size: 20px;
+  padding: 10px;
+  text-align: center;
+  text-transform: uppercase;
+  box-shadow: 0 0 20px #eee;
+  border-radius: 10px;
+  width: 100px;
+  background-image: linear-gradient(to right, #2ec9f0 0%, #649afd 51%, #0554c9 100%)
+}
+.gradient-button-1:hover { background-position: right center; }
+
+.gradient-button-2 {
+  margin: 10px;
+  color:rgb(58, 59, 59);
+  font-family: Impact, Haettenschweiler, 'Arial Bold', sans-serif;
+  font-size: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  box-shadow: 0 0 20px rgb(12, 90, 126);
+  border-radius: 10px;
+  width: 100px;
+  background-color: rgb(88, 214, 141);
+}
+.gradient-button-2:hover { background-position: right center; }
+
+.gForm {
+  background: rgb(54, 219, 170);
+
+}
+
+.dashForm {
+  background: rgb(55,240,248);
+  background: radial-gradient(circle, rgba(55,240,248,1) 0%, rgba(1,100,216,1) 100%);
+  padding: 10;
+}
+
+.label{
+  color: black;
+  font-weight: bold;
+  font-size: large;
 }
